Prepare project for production deployment
